put diffferent size markers

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                             <div class="legend-color" style="background-color: #9C27B0;"></div>
                             <span>Pilot</span>
                         </div>
+                        </div>
+                    </div>
+                    <hr style="margin: 8px 0;"> <!-- Separator -->
+                    <div class="form-check form-switch form-check-sm">
+                        <input class="form-check-input" type="checkbox" role="switch" id="sizeByCapacityToggle">
+                        <label class="form-check-label" for="sizeByCapacityToggle" style="font-size: 0.9em;">Size by Capacity</label>
                     </div>
                 </div>
             </div>
