--- a/login.html
+++ b/login.html
@@ -23,9 +23,27 @@
     </style>
 </head>
 <body>
-    <div class="card login-card shadow">
-        <div class="card-body">
-            <h3 class="card-title text-center mb-4">Admin Login</h3>
+    <!-- Navigation (No login status needed here) -->
+     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
+         <div class="container-fluid">
+             <a class="navbar-brand" href="index.html">Lithium Recycling Dashboard</a>
+             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="navbar-toggler-icon"></span>
+             </button>
+             <div class="collapse navbar-collapse" id="navbarNav">
+                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                     <li class="nav-item"><a class="nav-link" href="index.html">Map</a></li>
+                     <li class="nav-item"><a class="nav-link" href="facilities.html">Facilities</a></li>
+                     <li class="nav-item"><a class="nav-link" href="charts.html">Charts</a></li>
+                 </ul>
+             </div>
+         </div>
+     </nav>
+
+     <div style="padding-top: 70px;"> <!-- Add padding to offset fixed navbar -->
+        <div class="card login-card shadow">
+            <div class="card-body">
+                <h3 class="card-title text-center mb-4">Admin Login</h3>
             <div id="errorMessage" class="alert alert-danger d-none" role="alert"></div>
             <form id="loginForm">
                 <div class="mb-3">
@@ -42,8 +60,9 @@
                  <a href="index.html">Back to Dashboard</a>
             </div>
         </div>
-    </div>
+    </div> <!-- End padding div -->
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script> <!-- Added Bootstrap JS -->
     <script>
         document.getElementById('loginForm').addEventListener('submit', async function(event) {
             event.preventDefault(); // Prevent default form submission
