--- a/new-facility.html
+++ b/new-facility.html
@@ -11,11 +11,33 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="dashboard-container container mt-4">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-            <h3>Add New Facility</h3>
-            <a href="index.html" class="btn btn-outline-secondary"><i class="fas fa-times"></i> Cancel</a>
+    <div class="dashboard-container"> <!-- Removed container mt-4 -->
+        <!-- Navigation Placeholder -->
+        <div id="main-navigation" class="mb-4">
+             <nav class="navbar navbar-expand-lg navbar-light bg-light rounded p-2">
+                 <div class="container-fluid">
+                     <a class="navbar-brand" href="#">➕ Add New Facility</a>
+                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                         <span class="navbar-toggler-icon"></span>
+                     </button>
+                     <div class="collapse navbar-collapse" id="navbarNav">
+                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                             <li class="nav-item"><a class="nav-link" href="index.html">Map</a></li>
+                             <li class="nav-item"><a class="nav-link" href="facilities.html">Facilities</a></li>
+                             <li class="nav-item"><a class="nav-link" href="charts.html">Charts</a></li>
+                         </ul>
+                         <div id="authStatus" class="d-flex">
+                             <!-- Login/Logout status will be loaded here -->
+                         </div>
+                     </div>
+                 </div>
+             </nav>
         </div>
+
+         <div class="d-flex justify-content-between align-items-center mb-4">
+             <h3>Add New Facility Details</h3>
+             <a href="index.html" class="btn btn-outline-secondary"><i class="fas fa-times"></i> Cancel</a>
+         </div>
 
         <div id="errorMessage" class="alert alert-danger d-none" role="alert"></div>
         <div id="successMessage" class="alert alert-success d-none" role="alert"></div>
@@ -279,7 +301,53 @@
         });
 
          // Initial check
-         document.addEventListener('DOMContentLoaded', checkLogin);
+         // document.addEventListener('DOMContentLoaded', checkLogin); // Remove this line
+
+        // Auth Check/Logout Logic (Copied from other pages)
+        async function checkAuthStatus() {
+            const authStatusElement = document.getElementById('authStatus');
+            if (!authStatusElement) return;
+            try {
+                const response = await fetch('/api/session');
+                const sessionData = await response.json();
+                if (sessionData.loggedIn) {
+                    authStatusElement.innerHTML = `
+                        <span class="navbar-text me-3">Welcome, ${sessionData.user.username}!</span>
+                        <a href="new-facility.html" class="btn btn-sm btn-success me-2 disabled"><i class="fas fa-plus"></i> Add Facility</a>
+                        <a href="#" id="logoutLink" class="btn btn-sm btn-outline-danger">Logout</a>
+                    `;
+                    const logoutLink = document.getElementById('logoutLink');
+                    if(logoutLink) logoutLink.addEventListener('click', handleLogout);
+                } else {
+                    // Should have been redirected by checkLogin, but handle anyway
+                    authStatusElement.innerHTML = `<a href="login.html" class="btn btn-sm btn-outline-success">Admin Login</a>`;
+                }
+            } catch (error) {
+                console.error('Error checking auth status:', error);
+                authStatusElement.innerHTML = '<span class="text-danger small">Session check failed</span>';
+            }
+        }
+
+        async function handleLogout(event) {
+            event.preventDefault();
+            try {
+                const response = await fetch('/api/logout');
+                const result = await response.json();
+                if (result.success) {
+                    window.location.href = 'index.html'; // Go to dashboard after logout
+                } else {
+                    alert('Logout failed. Please try again.');
+                }
+            } catch (error) {
+                console.error('Logout error:', error);
+                alert('An error occurred during logout.');
+            }
+        }
+         // Call auth check after login check
+         document.addEventListener('DOMContentLoaded', () => {
+             checkLogin().then(checkAuthStatus); // Chain the checks
+         });
+
     </script>
 </body>
 </html>
