--- a/facilities.html
+++ b/facilities.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,6 +32,9 @@
                              </li>
                              <li class="nav-item">
                                  <a class="nav-link" href="charts.html">Charts</a>
+                             </li>
+                             <li class="nav-item">
+                                 <a class="nav-link" href="documents.html">Documents</a> <!-- Added Documents Link -->
                              </li>
                          </ul>
                          <div id="authStatus" class="d-flex">
