--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="charts.html">Charts</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="documents.html">Documents</a> <!-- Added Documents Link -->
+                                    </li>
                                 </ul>
                                 <div id="authStatus" class="d-flex align-items-center ms-3">
                                     <!-- Login/Logout status will be loaded here -->
