--- a/charts.html
+++ b/charts.html
@@ -34,6 +34,9 @@
                              <li class="nav-item">
                                  <a class="nav-link active" aria-current="page" href="charts.html">Charts</a>
                              </li>
+                             <li class="nav-item">
+                                 <a class="nav-link" href="documents.html">Documents</a> <!-- Added Documents Link -->
+                             </li>
                          </ul>
                          <div id="authStatus" class="d-flex">
                              <!-- Login/Logout status will be loaded here -->
