--- a/documents.html
+++ b/documents.html
@@ -44,6 +44,7 @@
                  <label for="facilitySelect" class="form-label">Select a facility to manage its documents:</label>
                  <select class="form-select" id="facilitySelect">
                      <option selected disabled value="">-- Select a Facility --</option>
+                     <option value="ALL">-- All Facilities --</option> <!-- Added All Facilities Option -->
                      <!-- Facility options will be loaded here by JavaScript -->
                  </select>
             </div>
@@ -66,9 +67,25 @@
                           <div id="uploadStatusMessage" class="form-text mt-1"></div> <!-- For upload feedback -->
                      </div>
 
+                     <hr> <!-- Separator between upload and add link -->
+
+                     <div class="mb-3">
+                          <label class="form-label">Add Website Link</label>
+                          <div class="input-group mb-2">
+                              <span class="input-group-text"><i class="fas fa-link"></i></span>
+                              <input type="url" class="form-control" id="linkUrlInput" placeholder="https://example.com" required>
+                          </div>
+                          <div class="input-group">
+                              <span class="input-group-text"><i class="fas fa-tag"></i></span>
+                              <input type="text" class="form-control" id="linkDescriptionInput" placeholder="Link Description (e.g., Company Website, News Article)" required>
+                              <button class="btn btn-outline-secondary" type="button" id="addLinkButton"><i class="fas fa-plus"></i> Add Link</button>
+                          </div>
+                          <div id="addLinkStatusMessage" class="form-text mt-1"></div> <!-- For add link feedback -->
+                     </div>
+
                      <hr>
 
-                     <h5>Uploaded Files</h5>
+                     <h5>Associated Items (Files & Links)</h5> <!-- Changed heading -->
                      <ul class="list-group" id="documentList">
                          <!-- Document links will be loaded here by JavaScript -->
                          <li class="list-group-item text-muted" id="noDocumentsMessage">Select a facility to see its documents.</li>
