--- a/edit-facility.html
+++ b/edit-facility.html
@@ -25,6 +25,7 @@
                              <li class="nav-item"><a class="nav-link" href="index.html">Map</a></li>
                              <li class="nav-item"><a class="nav-link" href="facilities.html">Facilities</a></li>
                              <li class="nav-item"><a class="nav-link" href="charts.html">Charts</a></li>
+                             <li class="nav-item"><a class="nav-link" href="documents.html">Documents</a></li> <!-- Added Documents Link -->
                          </ul>
                          <div id="authStatus" class="d-flex">
                              <!-- Login/Logout status will be loaded here -->
@@ -170,30 +171,6 @@
                      </div>
                 </div>
             </div>
-
-            <!-- Associated Documents Card -->
-            <div class="card mb-3">
-                <div class="card-header">Associated Documents</div>
-                <div class="card-body">
-                    <div class="mb-3">
-                        <label for="documentUploadInput" class="form-label">Upload New Document</label>
-                        <div class="input-group">
-                             <input type="file" class="form-control" id="documentUploadInput" aria-describedby="uploadDocumentButton">
-                             <button class="btn btn-outline-secondary" type="button" id="uploadDocumentButton"><i class="fas fa-upload"></i> Upload</button>
-                        </div>
-                         <div id="uploadStatusMessage" class="form-text mt-1"></div> <!-- For upload feedback -->
-                    </div>
-
-                    <hr>
-
-                    <h5>Uploaded Files</h5>
-                    <ul class="list-group" id="documentList">
-                        <!-- Document links will be loaded here by JavaScript -->
-                        <li class="list-group-item text-muted" id="noDocumentsMessage">No documents uploaded yet.</li>
-                    </ul>
-                </div>
-            </div>
-            <!-- End Associated Documents Card -->
 
 
             <button type="submit" class="btn btn-primary w-100 mb-4">Update Facility</button> <!-- Changed Button Text -->
