--- a/new-facility.html
+++ b/new-facility.html
@@ -25,6 +25,7 @@
                              <li class="nav-item"><a class="nav-link" href="index.html">Map</a></li>
                              <li class="nav-item"><a class="nav-link" href="facilities.html">Facilities</a></li>
                              <li class="nav-item"><a class="nav-link" href="charts.html">Charts</a></li>
+                             <li class="nav-item"><a class="nav-link" href="documents.html">Documents</a></li> <!-- Added Documents Link -->
                          </ul>
                          <div id="authStatus" class="d-flex">
                              <!-- Login/Logout status will be loaded here -->
