--- a/charts.html
+++ b/charts.html
@@ -14,40 +14,13 @@
 </head>
 <body>
     <div class="dashboard-container">
-        <!-- Navigation Placeholder (To be added later) -->
-        <div id="main-navigation" class="mb-4">
-             <!-- Navigation will be inserted here by JS or copied manually later -->
-             <nav class="navbar navbar-expand-lg navbar-light bg-light rounded p-2">
-                 <div class="container-fluid">
-                     <a class="navbar-brand" href="#">📊 Charts & Stats</a>
-                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                         <span class="navbar-toggler-icon"></span>
-                     </button>
-                     <div class="collapse navbar-collapse" id="navbarNav">
-                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                             <li class="nav-item">
-                                 <a class="nav-link" href="index.html">Map</a>
-                             </li>
-                             <li class="nav-item">
-                                 <a class="nav-link" href="facilities.html">Facilities</a>
-                             </li>
-                             <li class="nav-item">
-                                 <a class="nav-link active" aria-current="page" href="charts.html">Charts</a>
-                             </li>
-                             <li class="nav-item">
-                                 <a class="nav-link" href="documents.html">Documents</a> <!-- Added Documents Link -->
-                             </li>
-                         </ul>
-                         <div id="authStatus" class="d-flex ms-3"> <!-- Added ms-3 back -->
-                             <!-- Login/Logout status will be loaded here -->
-                         </div>
-                     </div>
-                 </div>
-             </nav>
-        </div>
+        <!-- Header Placeholder -->
+        <div id="header-placeholder"></div>
+        <!-- Hidden Subtitle for this page -->
+        <p id="page-subtitle-main" style="display: none;">Charts & Stats</p>
 
         <!-- Stats Cards Row -->
-        <div class="row mb-4">
+        <div class="row mb-4 mt-4"> <!-- Added mt-4 for spacing -->
             <div class="col-md-3">
                 <div class="stats-card text-center">
                     <div class="icon text-primary">
@@ -121,72 +94,17 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> <!-- End dashboard-container -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Common JS (Loads Header, Handles Theme/Auth) -->
+    <script src="js/common.js"></script>
     <!-- Custom Charts Page JS -->
     <script src="js/charts-page.js"></script>
-    <!-- Shared Auth JS (or include directly in charts-page.js) -->
-   <script>
-       // --- Apply Theme on Load Logic ---
-       (function applyTheme() {
-           const currentTheme = localStorage.getItem('theme');
-           if (currentTheme === 'dark-theme') {
-                document.body.classList.add('dark-theme');
-           } else {
-                // Optional: explicitly ensure light theme class isn't present if needed
-                // document.body.classList.remove('dark-theme');
-           }
-       })(); // Immediately invoke the function
-       // --- End Apply Theme on Load Logic ---
 
-       // Minimal Auth Check/Display Logic (can be moved to charts-page.js)
-       async function checkAuthStatus() {
-           const authStatusElement = document.getElementById('authStatus');
-            if (!authStatusElement) return;
-
-            try {
-                const response = await fetch('/api/session');
-                const sessionData = await response.json();
-
-                if (sessionData.loggedIn) {
-                    authStatusElement.innerHTML = `
-                        <span class="navbar-text me-3">Welcome, ${sessionData.user.username}!</span>
-                        <a href="new-facility.html" class="btn btn-sm btn-success me-2"><i class="fas fa-plus"></i> Add Facility</a>
-                        <a href="#" id="logoutLink" class="btn btn-sm btn-outline-danger">Logout</a>
-                    `;
-                    const logoutLink = document.getElementById('logoutLink');
-                    if(logoutLink) logoutLink.addEventListener('click', handleLogout);
-                } else {
-                    authStatusElement.innerHTML = `
-                        <a href="login.html" class="btn btn-sm btn-outline-success">Admin Login</a>
-                    `;
-                }
-            } catch (error) {
-                console.error('Error checking auth status:', error);
-                authStatusElement.innerHTML = '<span class="text-danger small">Session check failed</span>';
-            }
-        }
-
-        async function handleLogout(event) {
-            event.preventDefault();
-            try {
-                const response = await fetch('/api/logout');
-                const result = await response.json();
-                if (result.success) {
-                    window.location.reload();
-                } else {
-                    alert('Logout failed. Please try again.');
-                }
-            } catch (error) {
-                console.error('Logout error:', error);
-                alert('An error occurred during logout.');
-            }
-        }
-        document.addEventListener('DOMContentLoaded', checkAuthStatus);
-    </script>
+    <!-- Removed inline theme and auth scripts -->
 </body>
 </html>
