--- a/facilities.html
+++ b/facilities.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,39 +14,13 @@
 </head>
 <body>
     <div class="dashboard-container">
-        <!-- Navigation Placeholder -->
-        <div id="main-navigation" class="mb-4">
-             <nav class="navbar navbar-expand-lg navbar-light bg-light rounded p-2">
-                 <div class="container-fluid">
-                     <a class="navbar-brand" href="#">📋 Facilities List</a>
-                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                         <span class="navbar-toggler-icon"></span>
-                     </button>
-                     <div class="collapse navbar-collapse" id="navbarNav">
-                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                             <li class="nav-item">
-                                 <a class="nav-link" href="index.html">Map</a>
-                             </li>
-                             <li class="nav-item">
-                                 <a class="nav-link active" aria-current="page" href="facilities.html">Facilities</a>
-                             </li>
-                             <li class="nav-item">
-                                 <a class="nav-link" href="charts.html">Charts</a>
-                             </li>
-                             <li class="nav-item">
-                                 <a class="nav-link" href="documents.html">Documents</a> <!-- Added Documents Link -->
-                             </li>
-                         </ul>
-                         <div id="authStatus" class="d-flex ms-3"> <!-- Added ms-3 back -->
-                             <!-- Login/Logout status will be loaded here -->
-                         </div>
-                     </div>
-                 </div>
-             </nav>
-        </div>
+        <!-- Header Placeholder -->
+        <div id="header-placeholder"></div>
+        <!-- Hidden Subtitle for this page -->
+        <p id="page-subtitle-main" style="display: none;">Facilities List</p>
 
         <!-- Facilities List Section -->
-        <div class="row">
+        <div class="row mt-4"> <!-- Added mt-4 for spacing after header -->
             <div class="col-12">
                  <div class="facilities-list" style="max-height: none; overflow-y: visible;"> <!-- Adjust style if needed -->
                     <div class="tabs-container">
@@ -69,74 +43,15 @@
             </div>
         </div>
 
-    </div>
+    </div> <!-- End dashboard-container -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Common JS (Loads Header, Handles Theme/Auth) -->
+    <script src="js/common.js"></script>
     <!-- Custom Facilities Page JS -->
     <script src="js/facilities-page.js"></script>
-     <!-- REMOVED Inline Auth Script -->
 
-    <script>
-        // --- Apply Theme on Load Logic ---
-        (function applyTheme() {
-            const currentTheme = localStorage.getItem('theme');
-            if (currentTheme === 'dark-theme') {
-                 document.body.classList.add('dark-theme');
-            } else {
-                 // Optional: explicitly ensure light theme class isn't present if needed
-                 // document.body.classList.remove('dark-theme');
-            }
-        })(); // Immediately invoke the function
-        // --- End Apply Theme on Load Logic ---
-
-        // --- Auth Check Logic (Copied from index.html, needs to be on all pages) ---
-         async function checkAuthStatus() {
-            const authStatusElement = document.getElementById('authStatus');
-            if (!authStatusElement) return;
-
-            try {
-                const response = await fetch('/api/session');
-                const sessionData = await response.json();
-
-                if (sessionData.loggedIn) {
-                    authStatusElement.innerHTML = `
-                        <span>Welcome, ${sessionData.user.username}!</span>
-                        <a href="new-facility.html" class="btn btn-sm btn-success ms-2"><i class="fas fa-plus"></i> Add Facility</a>
-                        <a href="#" id="logoutLink" class="btn btn-sm btn-outline-danger ms-2">Logout</a>
-                    `;
-                    // Add event listener for logout
-                    document.getElementById('logoutLink').addEventListener('click', handleLogout);
-                } else {
-                    authStatusElement.innerHTML = `
-                        <a href="login.html" class="btn btn-sm btn-outline-success">Admin Login</a>
-                    `;
-                }
-            } catch (error) {
-                console.error('Error checking auth status:', error);
-                authStatusElement.innerHTML = '<span class="text-danger">Session check failed</span>';
-            }
-        }
-
-        async function handleLogout(event) {
-            event.preventDefault();
-            try {
-                const response = await fetch('/api/logout');
-                const result = await response.json();
-                if (result.success) {
-                    window.location.reload();
-                } else {
-                    alert('Logout failed. Please try again.');
-                }
-            } catch (error) {
-                console.error('Logout error:', error);
-                alert('An error occurred during logout.');
-            }
-        }
-
-        // Check auth status when the page loads
-        document.addEventListener('DOMContentLoaded', checkAuthStatus);
-        // --- End Auth Check Logic ---
-    </script>
+    <!-- Removed inline theme and auth scripts -->
 </body>
 </html>
