--- a/new-facility.html
+++ b/new-facility.html
@@ -35,6 +35,17 @@
              </nav>
         </div>
 
+        <div class="card mb-3">
+            <div class="card-header">Load from GeoJSON File</div>
+            <div class="card-body">
+                <div class="mb-3">
+                    <label for="geojsonFile" class="form-label">Select GeoJSON Feature File (.geojson, .json)</label>
+                    <input class="form-control" type="file" id="geojsonFile" accept=".geojson,.json">
+                </div>
+                <div id="geojsonStatus" class="form-text"></div> <!-- Area for upload status messages -->
+            </div>
+        </div>
+
          <div class="d-flex justify-content-between align-items-center mb-4">
              <h3>Add New Facility Details</h3>
              <a href="index.html" class="btn btn-outline-secondary"><i class="fas fa-times"></i> Cancel</a>
@@ -177,6 +188,112 @@
     </div>
 
     <script>
+        // --- GeoJSON File Upload Handling ---
+        const geojsonFileInput = document.getElementById('geojsonFile');
+        const geojsonStatusDiv = document.getElementById('geojsonStatus');
+        const facilityForm = document.getElementById('newFacilityForm');
+
+        geojsonFileInput.addEventListener('change', handleGeoJSONUpload);
+
+        function handleGeoJSONUpload(event) {
+            const file = event.target.files[0];
+            if (!file) {
+                geojsonStatusDiv.textContent = '';
+                return;
+            }
+
+            geojsonStatusDiv.textContent = `Reading file: ${file.name}...`;
+            geojsonStatusDiv.className = 'form-text text-info'; // Use Bootstrap text color classes
+
+            const reader = new FileReader();
+
+            reader.onload = function(e) {
+                try {
+                    const content = e.target.result;
+                    const geojson = JSON.parse(content);
+
+                    // Basic Validation: Check if it's a Feature object
+                    if (geojson.type !== 'Feature' || typeof geojson.properties !== 'object' || typeof geojson.geometry !== 'object') {
+                        throw new Error('Invalid GeoJSON format. File must contain a single GeoJSON Feature object.');
+                    }
+
+                    // Populate form fields
+                    populateFormFromGeoJSON(geojson.properties, geojson.geometry);
+
+                    geojsonStatusDiv.textContent = 'GeoJSON loaded successfully. Please review and complete the form.';
+                    geojsonStatusDiv.className = 'form-text text-success';
+
+                } catch (error) {
+                    console.error("Error processing GeoJSON file:", error);
+                    geojsonStatusDiv.textContent = `Error: ${error.message}`;
+                    geojsonStatusDiv.className = 'form-text text-danger';
+                    // Optionally clear the form or parts of it on error
+                    // facilityForm.reset(); // Consider if resetting is desired on error
+                }
+            };
+
+            reader.onerror = function() {
+                console.error("Error reading file");
+                geojsonStatusDiv.textContent = 'Error reading the selected file.';
+                geojsonStatusDiv.className = 'form-text text-danger';
+            };
+
+            reader.readAsText(file);
+        }
+
+        function populateFormFromGeoJSON(properties, geometry) {
+            // Map properties to form fields
+            document.getElementById('facilityName').value = properties.name || '';
+            document.getElementById('facilityId').value = properties.id || ''; // Allow manual override or auto-gen
+            document.getElementById('company').value = properties.company || '';
+            document.getElementById('address').value = properties.address || '';
+            document.getElementById('status').value = properties.status || 'Operating'; // Default if missing
+            document.getElementById('capacity').value = properties.capacity || '';
+            document.getElementById('technology').value = properties.technology || '';
+            document.getElementById('website').value = properties.website || '';
+            // Handle yearStarted/yearPlanned based on status
+            if (properties.status === 'Planned' && properties.yearPlanned) {
+                document.getElementById('yearStarted').value = properties.yearPlanned || '';
+            } else {
+                document.getElementById('yearStarted').value = properties.yearStarted || '';
+            }
+            document.getElementById('region').value = properties.region || '';
+            document.getElementById('country').value = properties.country || 'USA'; // Default if missing
+            document.getElementById('companyLogo').value = properties.companyLogo || '';
+            document.getElementById('facilityImage').value = properties.facilityImage || '';
+            document.getElementById('feedstock').value = properties.feedstock || '';
+            document.getElementById('products').value = properties.products || '';
+            document.getElementById('fundingSource').value = properties.fundingSource || '';
+            document.getElementById('size').value = properties.size || '';
+            document.getElementById('technologyDetails').value = properties.technologyDetails || '';
+            document.getElementById('description').value = properties.description || '';
+
+            // Handle Timeline (stringify if present)
+            if (properties.timeline && Array.isArray(properties.timeline)) {
+                try {
+                    document.getElementById('timeline').value = JSON.stringify(properties.timeline, null, 2); // Pretty print
+                } catch (e) {
+                    document.getElementById('timeline').value = ''; // Clear if stringify fails
+                    console.warn("Could not stringify timeline data from GeoJSON:", e);
+                }
+            } else {
+                document.getElementById('timeline').value = '';
+            }
+
+            // Handle Geometry (Coordinates)
+            if (geometry && geometry.type === 'Point' && Array.isArray(geometry.coordinates) && geometry.coordinates.length >= 2) {
+                document.getElementById('longitude').value = geometry.coordinates[0];
+                document.getElementById('latitude').value = geometry.coordinates[1];
+            } else {
+                // Clear coordinates if geometry is invalid or missing
+                document.getElementById('longitude').value = '';
+                document.getElementById('latitude').value = '';
+                console.warn("Geometry data missing or invalid in GeoJSON.");
+            }
+        }
+        // --- End GeoJSON File Upload Handling ---
+
+
         // Check if user is logged in - redirect if not
         async function checkLogin() {
             try {
